Deleted useless patterns

--- a/carina-utils/src/test/resources/config.properties
+++ b/carina-utils/src/test/resources/config.properties
@@ -21,6 +21,6 @@ time_format=HH:mm:ss
 
 retry_count=3
 
-test_naming_pattern={suite} {test_class} - {method_name} {method_priority} {method_thread_pool_size} {method_description} {host}
+test_naming_pattern={suite} {test_class} - {method_name} {method_priority} {method_thread_pool_size} {method_description}
 
 locale=en_US,de_DE,fr_FR
