--- a/carina-core/src/main/resources/config.properties
+++ b/carina-core/src/main/resources/config.properties
@@ -77,7 +77,7 @@ allow_fullsize_screenshot=false
 project_report_directory=NULL
 report_url=NULL
 max_screen_history=NULL
-test_naming_pattern={tuid} {map} {suite} - {method_name} {dataprovider} {invocation}
+test_naming_pattern={tuid} {map} {test_name} - {method_name} {dataprovider} {invocation}
 
 log_all_json=true
 
